# Experimentational--Text-Style-Transfer

./: README.md
diffusion-lm-style-transfer/: .env.example  .gitignore  Makefile  pyproject.toml  requirements.txt  setup.py
diffusion-lm-style-transfer/.github/workflows/: ci.yml
diffusion-lm-style-transfer/phase1_embedding_foundation/: __init__.py  embeddings.py  rounding.py  vocab.py
diffusion-lm-style-transfer/phase1_embedding_foundation/configs/: embedding_config.yaml
diffusion-lm-style-transfer/phase1_embedding_foundation/tests/: test_embeddings.py
diffusion-lm-style-transfer/phase2_forward_diffusion/: __init__.py  diffusion.py  noise_schedule.py
diffusion-lm-style-transfer/phase2_forward_diffusion/configs/: diffusion_config.yaml
diffusion-lm-style-transfer/phase2_forward_diffusion/tests/: test_diffusion.py
diffusion-lm-style-transfer/phase3_denoising_network/: __init__.py  denoiser.py  time_embedding.py  transformer.py
diffusion-lm-style-transfer/phase3_denoising_network/configs/: model_config.yaml
diffusion-lm-style-transfer/phase3_denoising_network/tests/: test_denoiser.py
diffusion-lm-style-transfer/phase4_style_conditioning/: __init__.py  classifier_free_guidance.py  classifier_guidance.py  style_encoder.py
diffusion-lm-style-transfer/phase5_style_transfer_inference/: __init__.py  ddim.py  inference.py  sdedit.py
diffusion-lm-style-transfer/phase6_training_pipeline/: __init__.py  finetune.py  losses.py  pretrain.py  train_classifier.py
diffusion-lm-style-transfer/phase7_evaluation/: __init__.py  evaluate.py  metrics.py
diffusion-lm-style-transfer/scripts/: download_data.sh  preprocess.sh  run_experiment.sh
(+8 files in other folders)
