[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "diffusion-lm-style-transfer"
version = "0.1.0"
description = "Experimental Diffusion LM for controllable text style transfer"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Suriya", email = "suriya.manivel0@gmail.com" }]
keywords = ["diffusion", "language model", "text style transfer", "NLP", "deep learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "black", "ruff", "mypy"]
notebooks = ["jupyter", "ipywidgets", "matplotlib", "seaborn"]

[tool.setuptools.packages.find]
where = ["."]
include = ["phase*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = [
    "phase1_embedding_foundation/tests",
    "phase2_forward_diffusion/tests",
    "phase3_denoising_network/tests",
    "phase4_style_conditioning/tests",
    "phase5_style_transfer_inference/tests",
    "phase6_training_pipeline/tests",
    "phase7_evaluation/tests",
]
addopts = "-v --tb=short"
